--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,17 @@
             <version>0.9.11</version>
         </dependency>
     </dependencies>
-
+<build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
     
 
 </project>
