--- a/src/main/resources/socialApplication.properties
+++ b/src/main/resources/socialApplication.properties
@@ -1,7 +1,7 @@
-apiKey = 1092988854150
-secret = Jn9AxjYe8
-appName = q3eenjkass
-appSecret = 5lqK3p9XtW
-username = 23t91p6hlofsg
-password = Sq1VeYqKOvv
+facebook_apiKey = 1092988854150
+facebook_secret = Jn9AxjYe8
+instagram_appName = q3eenjkass
+instagram_appSecret = 5lqK3p9XtW
+twitter_username = 23t91p6hlofsg
+twitter_password = Sq1VeYqKOvv
 keyWord = dog
